--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
+sudo: false
+
 addons:
   apt:
+    sources:
+      - ubuntu-sdk-team
     packages:
     - qt5-default
+    - qt5-qmake
     - qtbase5-dev
     - qtdeclarative5-dev
     - libqt5webkit5-dev
     - libsqlite3-dev
+    
     
 script:
  - qmake -project
