--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,10 @@
-sudo: false
+dist: trusty
 
-addons:
-  apt:
-    sources:
-      - ubuntu-sdk-team
-    packages:
-    - qt5-default
-    - qt5-qmake
-    - qtbase5-dev
-    - qtdeclarative5-dev
-    - libqt5webkit5-dev
-    - libsqlite3-dev
-    
-    
+before_install:
+- sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+- sudo apt-get update -qq
+- sudo apt-get install -qq libqt5webkit5-dev qtdeclarative5-dev
+
 script:
  - qmake -project
  - qmake LED-Controller.pro
