--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 dist: trusty
 
 before_install:
-- sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-- sudo apt-get update -qq
-- sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
+ - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
 
 script:
- - qmake -project
- - qmake LED-Controller.pro
+ - qmake -qt=qt5 -v
+ - qmake -qt=qt5
  - make
