--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
-install:
-  - set QTDIR=C:\Qt\5.7\mingw53_32
-  - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
+init:
+ - set QTDIR=C:\Qt\5.7\mingw53_32
+ - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
+ 
 build_script:
   - qmake LED-Controller.pro
   - mingw32-make
