--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,3 +5,16 @@ init:
 build_script:
   - qmake LED-Controller.pro
   - mingw32-make
+
+deploy:
+  release: LEDController-v$(APPVEYOR_REPO_TAG_NAME)
+  description: 'Auto-generated release'
+  provider: GitHub
+  auth_token:
+    secure: VtuiEw6NXRRYgPkzk+EHYxBu4T5I+7hATgUnMYvA5zR0CnywuDF/gUp0sfxXv+Vx # your encrypted token from GitHub
+  artifact: *.exe
+  draft: true
+  prerelease: true
+  on:
+    branch: master                 # release from master branch only
+    appveyor_repo_tag: true        # deploy on tag push only
