--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 init:
  - set QTDIR=C:\Qt\5.7\mingw53_32
  - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
+ - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
  
 build_script:
   - qmake LED-Controller.pro
@@ -12,9 +13,12 @@ deploy:
   provider: GitHub
   auth_token:
     secure: VtuiEw6NXRRYgPkzk+EHYxBu4T5I+7hATgUnMYvA5zR0CnywuDF/gUp0sfxXv+Vx # your encrypted token from GitHub
-  artifact: *.exe
+  artifact: /*.exe
   draft: true
   prerelease: true
   on:
     branch: master                 # release from master branch only
     appveyor_repo_tag: true        # deploy on tag push only
+    
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
