change artifact name

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,8 @@ build_script:
   
 artifacts:
 
-  - path: .\release\LED-Controller.exe
+  - path: release\LED-Controller.exe
+    name: ledExe
   
 deploy:
   release: LEDController-$(APPVEYOR_REPO_TAG_NAME)
@@ -17,7 +18,7 @@ deploy:
   provider: GitHub
   auth_token:
     secure: VtuiEw6NXRRYgPkzk+EHYxBu4T5I+7hATgUnMYvA5zR0CnywuDF/gUp0sfxXv+Vx # your encrypted token from GitHub
-  artifact: .\release\LED-Controller.exe
+  artifact: ledExe
   draft: true
   prerelease: true
   on:
