--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,6 @@
 init:
  - set QTDIR=C:\Qt\5.7\mingw53_32
- - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
- - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+ - set PATH=%PATH%;%QTDIR%\bin;C:\Qt\Tools\mingw530_32\bin
  
 build_script:
   - qmake LED-Controller.pro
@@ -9,9 +8,15 @@ build_script:
   
 artifacts:
 
-  - path: release\LED-Controller.exe
+  - path: release\deploy
     name: ledExe
   
+after_build:
+    - cd release
+    - mkdir deploy
+    - copy LED-Controller.exe deploy
+    - cd deploy
+    - windeployqt LED-Controller.exe
 deploy:
   release: LEDController-$(APPVEYOR_REPO_TAG_NAME)
   description: 'Auto-generated release'
