--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,8 @@ build_script:
   - mingw32-make
   
 artifacts:
-
   - path: release\deploy
-    name: ledExe
+    name: windows
   
 after_build:
     - cd release
@@ -23,7 +22,7 @@ deploy:
   provider: GitHub
   auth_token:
     secure: VtuiEw6NXRRYgPkzk+EHYxBu4T5I+7hATgUnMYvA5zR0CnywuDF/gUp0sfxXv+Vx # your encrypted token from GitHub
-  artifact: ledExe
+  artifact: windows
   draft: true
   prerelease: true
   on:
