added arduino deployment to appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,8 @@ build_script:
 artifacts:
   - path: release\deploy
     name: windows
+  - path: arduino\arduino.ino
+    name: arduino
   
 after_build:
     - cd release
@@ -22,7 +24,7 @@ deploy:
   provider: GitHub
   auth_token:
     secure: VtuiEw6NXRRYgPkzk+EHYxBu4T5I+7hATgUnMYvA5zR0CnywuDF/gUp0sfxXv+Vx # your encrypted token from GitHub
-  artifact: windows
+  artifact: windows, arduino
   draft: true
   prerelease: true
   on:
